# gts-rust

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
gts/: Cargo.toml
gts-cli/: Cargo.toml
gts-cli/src/: gen_schemas.rs
gts-macros/: Cargo.toml  README.md
gts-macros-cli/: Cargo.toml
gts-macros/src/: lib.rs
gts-macros/tests/: inheritance_tests.rs  integration_tests.rs
gts-macros/tests/compile_fail/: base_parent_mismatch.stderr  nested_type_no_instance_json.rs  nested_type_no_instance_json.stderr  non_gts_generic.stderr
gts/src/: entities.rs  files_reader.rs  gts.rs  lib.rs  ops.rs  schema.rs  store.rs
