[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["GTS Community"]
repository = "https://github.com/GlobalTypeSystem/gts-rust"
description = "Global Type System implementation in rust"
rust-version = "1.92.0"
categories = ["development-tools::build-utils"]
readme = "README.md"

[workspace]
members = ["gts", "gts-cli", "gts-macros", "gts-macros-cli"]
resolver = "2"

[workspace.lints.rust]
deprecated = "deny"
non_ascii_idents = "forbid"
unsafe_code = "forbid"
unused_mut = "warn"
noop_method_call = "warn"
unused_import_braces = "warn"

[workspace.lints.clippy]
# See clippy rules details https://rust-lang.github.io/rust-clippy/master/index.html
# Here will be workspace global rules
pedantic = { level = "deny", priority = -1 }
async_yields_async = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
clone_on_copy = "deny"
cognitive_complexity = "deny"
dbg_macro = "deny"
debug_assert_with_mut_call = "deny"
default_trait_access = "deny"
doc_link_with_quotes = "deny"
doc_markdown = "deny"
elidable_lifetime_names = "deny"
empty_line_after_outer_attr = "deny"
empty_structs_with_brackets = "deny"
enum_glob_use = "deny"
expect_used = "deny"
explicit_iter_loop = "deny"
float_cmp = "deny"
float_cmp_const = "deny"
format_push_string = "deny"
if_not_else = "deny"
ignore_without_reason = "deny"
ignored_unit_patterns = "deny"
implicit_clone = "deny"
items_after_statements = "deny"
implicit_hasher = "deny"
inefficient_to_string = "deny"
integer_division = "deny"
ip_constant = "deny"
lossy_float_literal = "deny"
manual_assert = "deny"
manual_let_else = "deny"
manual_string_new = "deny"
many_single_char_names = "deny"
map_clone = "deny"
map_unwrap_or = "deny"
match_same_arms = "deny"
match_wildcard_for_single_variants = "deny"
missing_errors_doc = "deny"
missing_fields_in_debug = "deny"
missing_panics_doc = "deny"
must_use_candidate = "deny"
mutex_atomic = "deny"
needless_borrow = "deny"
needless_lifetimes = "deny"
needless_pass_by_value = "deny"
no_effect_underscore_binding = "deny"
non_ascii_literal = "deny"
non_std_lazy_statics = "deny"
option_as_ref_cloned = "deny"
redundant_closure_for_method_calls = "deny"
redundant_else = "deny"
ref_option = "deny"
regex_creation_in_loops = "deny"
return_self_not_must_use = "deny"
semicolon_if_nothing_returned = "deny"
single_char_pattern = "deny"
similar_names = "deny"
single_match_else = "deny"
struct_excessive_bools = "deny"
suspicious_operation_groupings = "deny"
too_many_lines = "deny"
trivially_copy_pass_by_ref = "deny"
type_complexity = "deny"
unchecked_time_subtraction = "deny"
unnecessary_debug_formatting = "deny"
uninlined_format_args = "deny"
unnecessary_literal_bound = "deny"
unnecessary_wraps = "deny"
unnested_or_patterns = "deny"
unreadable_literal = "deny"
unused_async = "deny"
unused_self = "deny"
unwrap_used = "deny"
use_debug = "deny"
used_underscore_binding = "deny"
used_underscore_items = "deny"
useless_let_if_seq = "deny"
wildcard_dependencies = "deny"
wildcard_imports = "deny"

# Additional lints for LLM-generated code quality
# Catches redundant/inefficient patterns
redundant_clone = "deny"
redundant_pattern_matching = "deny"
redundant_pub_crate = "deny"
str_to_string = "deny"
manual_ok_or = "deny"
manual_map = "deny"
manual_filter_map = "deny"
manual_find_map = "deny"

# Prevents verbose/non-idiomatic code
match_bool = "deny"
needless_for_each = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"

# Memory efficiency and correctness
large_stack_arrays = "deny"
large_types_passed_by_value = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
string_lit_as_bytes = "deny"
verbose_file_reads = "deny"

# Allowed pedantic lints with explanations:
# - module_name_repetitions: GTS domain requires explicit naming (e.g., GtsError in gts module)
module_name_repetitions = "allow"

[workspace.dependencies]
gts = { version = "0.7.8", path = "gts" }
gts-cli = { version = "0.7.8", path = "gts-cli" }
gts-macros = { version = "0.7.8", path = "gts-macros" }
gts-macros-cli = { version = "0.7.8", path = "gts-macros-cli" }

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
regex = "1.12"
uuid = { version = "1.19", features = ["serde", "v4", "v5"] }

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }

# Server dependencies
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1.49", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
atty = "0.2"
chrono = "0.4"

# JSON Schema validation
jsonschema = "0.18"

# JSON Schema generation
schemars = { version = "0.8", features = ["uuid1"] }

# File system
walkdir = "2.5"

# Format parsing
serde-saphyr = "0.0.10"
