[package]
name = "gts-cli"
version = "0.7.8"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Global Type System (GTS) CLI and HTTP server"
keywords = ["gts", "cli", "http", "server"]
categories.workspace = true
readme.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "gts"
path = "src/main.rs"

[dependencies]
gts.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
atty.workspace = true
chrono.workspace = true
regex.workspace = true
walkdir.workspace = true
