[package]
name = "gts-macros-cli"
version = "0.7.8"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Demo tool for GTS macros schema introspection and inheritance"
keywords = ["gts", "macros", "cli"]
categories.workspace = true
readme.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "gts-macros-cli"
path = "src/main.rs"

[dependencies]
gts = { path = "../gts" }
gts-macros = { path = "../gts-macros" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true
schemars.workspace = true
clap.workspace = true
