[package]
name = "gts-macros"
version = "0.7.8"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Procedural macros for GTS schema generation"
keywords = ["gts", "macro"]
categories.workspace = true
readme = "README.md"
publish = true

[lints]
workspace = true

[lib]
proc-macro = true
test = false

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
serde_json.workspace = true

[dev-dependencies]
serde.workspace = true
trybuild = "1.0"
jsonschema.workspace = true
gts = { path = "../gts" }
uuid.workspace = true
schemars.workspace = true
