[package]
name = "gts"
version = "0.7.8"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Global Type System (GTS) library for Rust"
keywords = ["gts", "jsonschema"]
categories.workspace = true
readme.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
jsonschema.workspace = true
schemars.workspace = true
walkdir.workspace = true
tracing.workspace = true
shellexpand = "3.1"
serde_yaml.workspace = true
